# pmx

./: CONTRIBUTING.md  Makefile.am  README  README.md  autogen.sh  configure.ac
include/: mxProcUtils.h  pmx.h  pmxsupport.h
src/: Makefile.am  main.c  mxProcUtils.c  mxProcUtils_SunOS.c  mxProcUtils_linux.c  mxProcUtils_sparc.c  mxProcUtils_x86.c  pmx.c
test/: Makefile.am  test-pmx.cpp
test/lib/: Makefile.am  pmxext.cpp  structFOO.h  types_FOO.cpp  types_FOO.h
