lib_LTLIBRARIES = libpmxext-0.1.la

AM_CXXFLAGS = -I$(srcdir)/../../include 

libpmxext_0_1_ladir = $(includedir)/pmx

PMX_EXT_VERSION = 0:1:0

libpmxext_0_1_la_SOURCES = types_FOO.cpp #types_FOO.h structFOO.h
#libtest_la_HEADERS = $(srcdir)/../include/pmx.h  $(srcdir)/../include/pmxsupport.h 
libpmxext_0_1_la_LDFLAGS = -version-info $(PMX_EXT_VERSION)
